# imagetool

./: .gitignore  Cargo.toml  Makefile  README.md  ff.c  ff.h  fs.c  fs.h  imagetool.c  imagetool.h  system.c  system.h
fileformat/: raw.c
filesystem/: fat32.c  fat32.h
src/: imagetool.rs  lib.rs  main.rs
src/imagetool/: fs_ops.rs  host_ops.rs  mem_pool.rs  utils.rs  vfs.rs
src/imagetool/fs_ops/: fat.rs
src/imagetool/host_ops/: raw.rs
