[package]
name = "imagetool"
version = "1.0.0"
edition = "2021"
authors = [ "Jiajun Wang<ryan1202@foxmail.com>" ]
readme = "README.md"
repository = "https://github.com/Ryan1202/imagetool/"
license = "LGPL-2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]


[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive", "cargo", "env", "unicode", "wrap_help", "debug"] }
serde = { version = "1.0.181", features = ["derive"] }
serde-big-array = "0.5.1"
syn = "2.0.28"
